# Thunder

./: .env.templete  .gitignore  Cargo.toml  Dockerfile  build.rs  config.yaml  docker-compose.yaml
proto/: thunder.proto
src/: core.rs  main.rs  socket.rs
src/database/mongo/: connect.rs  users.rs
src/database/mongo/user/: users.rs
src/database/redis/: connect.rs
src/database/redis/group/: group_hash.rs
src/database/redis/matchs/: match_hash.rs
src/database/redis/message/: message_hash.rs
src/database/redis/socket/: socker.rs  socket_hash.rs
src/database/redis/test/: test.rs
src/game/components/config/: config_component.rs
src/game/components/group/: group_join_component.rs  group_leave_component.rs
src/game/components/matchs/: random_match_complete_component.rs  random_match_custom_data_send_component.rs  random_match_join_component.rs  random_match_leave_component.rs  random_match_wait_join_component.rs  random_match_wait_success_componet.rs
src/game/components/message/: group_message_component.rs  random_match_message_component.rs  server_message_component.rs  system_message_component.rs  whisper_message_component.rs
src/game/enums/: core_enum.rs
src/game/scheduler/: scheduler.rs
src/persistence/users/: user_data.rs
src/router/: http_router.rs  singleton_test.rs  socket_router.rs
src/router/server/: http_router.rs  socket_router.rs
src/router/service/: group_router.rs  match_router.rs  message_router.rs
src/socket/: router.rs
src/structs/: users_struct.rs
src/utils/: etc.rs  jwt.rs  sha.rs
(+21 files in other folders)
